--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,12 @@ coverage
 
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
+.vscode
 .idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-!/dist/
+/dist/*
+!/.vscode/
